# latex-include

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
docs/reference/: main.md
src/latex_include/: __init__.py  main.py
